[package]
name = "local_mixing"
version = "0.1.0"
edition = "2024"

[lib]
name = "local_mixing"            
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "local_mixing_bin"        
path = "src/main.rs"

[profile.release]
overflow-checks = true

[dependencies]
rand = "0.9.0"
rayon = "1.10.0"
serde = { version = "1.0.217", features = ["derive"] }
bincode = "1.3.3"
rusqlite = { version = "0.33.0", features = ["bundled"] }
lru = "0.12"
itertools = "0.13"
once_cell = "1.19"
dashmap = "6.1.0"
crossbeam = "0.8.4"
clap = "4.5.46"
smallvec = "1.15.1"
ctrlc = "3.2"
fastrand = "2.3.0"
plotters = "0.3"
pyo3 = { version = "0.27.1", features = ["extension-module"] }
numpy = "0.27.0"
lmdb = "0.8.0"
libc = "0.2.178"
lmdb-sys = "0.8.0"
